--- a/16-NYTSearch/Instructions/index.html
+++ b/16-NYTSearch/Instructions/index.html
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Search Term</label>
-                        <input type="email" class="form-control" id="SearchText" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="searchText" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlSelect2">Number of Records to Retrieve</label>
@@ -56,34 +56,56 @@
             Top Articles
 
         </div>
+        <div class="output"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
 
-        var searchText = $("#searchText").val();
-        var recordNumber = $("#recordNumber").val();
-        var startYText = $("#startYText").val();
-        var endYText = $("#endYText").val();
 
 
 
-        $("#searchBtn").on("click",function(e){
+        $("#searchBtn").on("click", function (e) {
+            var searchText = $("#searchText").val();
+            var recordNumber = $("#recordNumber").val();
+            var startYText = $("#startYText").val();
+            var endYText = $("#endYText").val();
             e.preventDefault();
-            
+            console.log()
+            var queryURL = "https://api.nytimes.com/svc/search/v2/articlesearch.json?q=" + searchText + "&api-key=aazIoldSFz7mK6GU5JsMorqFdNcg0LY5"
+
+            $.ajax({
+                url: queryURL,
+                method: "GET"
+            }).then(function (r) {
+
+                console.log(r);
+                for (var i = 0; i < recordNumber; i++) {
+                    var outputInfo = $("<div>");
+                    outputInfo.text(`${i + 1} |
+                | ${r.response.docs[i].headline.main} |
+                | ${r.response.docs[i].byline.original} |
+                | Section: ${r.response.docs[i].section_name} |
+                | ${r.response.docs[i].pub_date}`)
+
+                    $(".output").append(outputInfo);
+
+                }
+            })
+
 
 
 
 
         });
 
-        $("#clearBtn").on("click",function(e){
+        $("#clearBtn").on("click", function (e) {
             e.preventDefault();
-        
+
             searchText = $("#searchText").val("");
-        recordNumber = $("#recordNumber").val("");
-         startYText = $("#startYText").val("");
-        endYText = $("#endYText").val("");
+            recordNumber = $("#recordNumber").val("");
+            startYText = $("#startYText").val("");
+            endYText = $("#endYText").val("");
 
 
 
